--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "jquery": "^3.6.0",
-    "less": "^4.1.1"
+    "less": "^4.1.1",
+    "lodash": "^4.17.21"
   },
   "sideEffects": [
     "*.css",
